updated navbar CTA

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
   <section class="hero-section py-5 text-center bg-primary text-white" aria-labelledby="hero-heading">
     <div class="container">
       <h1 id="hero-heading" class="display-4 fw-bold">Our Work</h1>
-      <a href="#web-services-heading" class="btn btn-light btn-lg mt-3">Explore Our Services</a>
+      <a href="contact.html" class="btn btn-light btn-lg mt-3">Contact Us</a>
     </div>
   </section>
 
