--- a/about.html
+++ b/about.html
@@ -113,12 +113,14 @@
                   <!-- Paul -->
                   <div class="col-md-4 mb-5">
                     <figure class="team-member">
-                      <img src="./images/Paul.jpg" alt="Paul Turner, smiling and wearing a blue shirt." class="img-fluid rounded-circle mb-3 shadow" loading="lazy">
+                      <img src="./images/Paul.jpg" alt="Paul Turner." class="img-fluid rounded-circle mb-3 shadow" loading="lazy">
                       <figcaption>
                         <h3 class="team-member-name">Paul Turner</h3>
-                        <p class="team-member-role text-muted">Founder • Lead Web Developer</p>
+                        <p class="team-member-role text-muted">Founder • Software Engineer • Business Intelligence Analyst</p>
                         <p class="team-member-bio">
-                          With 10+ years of development experience, Paul creates custom web solutions designed to help local businesses grow and thrive.
+                          With 10+ years of development experience, Paul creates custom web solutions for your business, generates data-driven 
+                          decision-making recommendations that can help you make informed choices for your business, help you migrate to the Cloud, 
+                          and/or reduce your cybersecurity risk.
                         </p>
                       </figcaption>
                     </figure>
@@ -129,9 +131,10 @@
                     <figure class="team-member">
                       <figcaption>
                         <h3 class="team-member-name">Melissa Brock</h3>
-                        <p class="team-member-role text-muted">Co-Founder • Creative Director</p>
+                        <p class="team-member-role text-muted">Co-Founder • Entrepreneur</p>
                         <p class="team-member-bio">
-                          Melissa ensures every website looks stunning and delivers an intuitive experience for visitors on every device.
+                          Melissa leverages her years of experience in medical, agriculture, and other small business industries, to review Websites
+                          for the functionality that small businesses need to convert website vistors into customers.
                         </p>
                       </figcaption>
                     </figure>
@@ -142,9 +145,11 @@
                     <figure class="team-member">
                       <figcaption>
                         <h3 class="team-member-name">Toby Brock</h3>
-                        <p class="team-member-role text-muted">Co-Founder • Marketing Strategist</p>
+                        <p class="team-member-role text-muted">Co-Founder • Farmer</p>
                         <p class="team-member-bio">
-                          Toby brings SEO and digital marketing expertise to the team, helping clients attract and convert new customers effectively.
+                          A life long farmer and entrepreneur, Toby brings a unique perspective to the team.
+                          He understands the challenges of running a business in a competitive market and is passionate about helping others succeed. His role 
+                          in advising and mentoring the team is invaluable.
                         </p>
                       </figcaption>
                     </figure>
