updated bio and links

--- a/index.html
+++ b/index.html
@@ -156,20 +156,17 @@
   
   
   
-      <!-- Newsletter -->
-      <form class="footer-newsletter" aria-label="Subscribe to our newsletter">
-        <label for="newsletter-email" class="visually-hidden">Email address</label>
-        <input type="email" id="newsletter-email" name="email" placeholder="Your email address" required>
-        <button type="submit">Subscribe</button>
-      </form>
-  
-      <!-- Social Media -->
-      <div class="footer-socials" aria-label="Social Media">
-        <a href="#" aria-label="Facebook"><img src="https://img.icons8.com/ios-filled/24/ffffff/facebook.png" alt="" /></a>
-        <a href="#" aria-label="Instagram"><img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="" /></a>
-        <a href="#" aria-label="LinkedIn"><img src="https://img.icons8.com/ios-filled/24/ffffff/linkedin.png" alt="" /></a>
-      </div>
-  
+       <!-- Newsletter -->
+       <form class="footer-newsletter" action="https://formspree.io/f/xeqyrgva" method="POST" aria-label="Subscribe to our newsletter"></form>
+       <label for="newsletter-email" class="visually-hidden">Email address</label>
+       <input type="email" id="newsletter-email" name="email" placeholder="Your email address" required>
+       <button type="submit">Subscribe</button>
+     </form>
+ 
+     <!-- Social Media -->
+     <div class="footer-socials" aria-label="Social Media">
+       <a href="https://www.facebook.com/BayouWebsites" aria-label="Facebook"><img src="https://img.icons8.com/ios-filled/24/ffffff/facebook.png" alt="" /></a>
+     </div>
       <!-- Copyright -->
       <div class="footer-copy">
         <p>&copy; 2025 Bayou Websites. All rights reserved.</p>
