--- a/about.html
+++ b/about.html
@@ -75,6 +75,10 @@
                 <p class="about-text lead text-center mb-4">
                   At <strong>Bayou Websites</strong>, we specialize in building powerful, user-friendly websites for blue-collar businesses. 
                   From plumbers and contractors to HVAC specialists, we understand the demands of your industry—and we deliver solutions that get results.
+                  Our team our Louisiana natives, and appreciate the rich environment that a bayou provides. As a company, we want to offer 
+                  that same level of value to each of our customers. We are more then a website company though, we are a company that provides
+                  websites, business intelligence services, cloud computing advise, and cybersecurity risk assessments. We are here to help you grow your business.
+                  We are a small business, just like you, and we understand the challenges you face. Our goal is to help you succeed in the digital world.
                 </p>
                 <div class="row justify-content-center">
                   <div class="col-md-8">
@@ -174,7 +178,7 @@
   
   
       <!-- Newsletter -->
-      <form class="footer-newsletter" aria-label="Subscribe to our newsletter">
+      <form class="footer-newsletter" action="https://formspree.io/f/xeqyrgva" method="POST" aria-label="Subscribe to our newsletter"></form>
         <label for="newsletter-email" class="visually-hidden">Email address</label>
         <input type="email" id="newsletter-email" name="email" placeholder="Your email address" required>
         <button type="submit">Subscribe</button>
@@ -182,9 +186,7 @@
   
       <!-- Social Media -->
       <div class="footer-socials" aria-label="Social Media">
-        <a href="#" aria-label="Facebook"><img src="https://img.icons8.com/ios-filled/24/ffffff/facebook.png" alt="" /></a>
-        <a href="#" aria-label="Instagram"><img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="" /></a>
-        <a href="#" aria-label="LinkedIn"><img src="https://img.icons8.com/ios-filled/24/ffffff/linkedin.png" alt="" /></a>
+        <a href="https://www.facebook.com/BayouWebsites" aria-label="Facebook"><img src="https://img.icons8.com/ios-filled/24/ffffff/facebook.png" alt="" /></a>
       </div>
   
       <!-- Copyright -->
