--- a/about.html
+++ b/about.html
@@ -73,12 +73,9 @@
               <div class="container">
                 <h2 id="about-heading" class="section-title text-center mb-4">Nice To Meet You!</h2>
                 <p class="about-text lead text-center mb-4">
-                  At <strong>Bayou Websites</strong>, we specialize in building powerful, user-friendly websites for blue-collar businesses. 
-                  From plumbers and contractors to HVAC specialists, we understand the demands of your industry—and we deliver solutions that get results.
-                  Our team our Louisiana natives, and appreciate the rich environment that a bayou provides. As a company, we want to offer 
-                  that same level of value to each of our customers. We are more then a website company though, we are a company that provides
-                  websites, business intelligence services, cloud computing advise, and cybersecurity risk assessments. We are here to help you grow your business.
-                  We are a small business, just like you, and we understand the challenges you face. Our goal is to help you succeed in the digital world.
+                  Our team are Louisiana natives and appreciate the rich environment that a Bayou provides. As a company, we want to offer that same level of value to the trade industry ecosystem,
+                  if you will. We are more than a website company though, we are a company that provides websites, business intelligence services, cloud computing advise, and cybersecurity risk assessments. 
+                  We are here to help you grow your business. We are a small business, just like you, and we understand the challenges you face. Our goal is to help you succeed in the digital world.
                 </p>
                 <div class="row justify-content-center">
                   <div class="col-md-8">
