--- a/about.html
+++ b/about.html
@@ -60,11 +60,15 @@
   </nav>
 
 
-  <!-- Hero Section -->
-  <section class="hero-section py-5 text-center bg-primary text-white" aria-labelledby="hero-heading">
+   <!-- Hero Section -->
+   <section class="hero-section py-5 text-center text-white" aria-labelledby="hero-heading">
     <div class="container">
       <h1 id="hero-heading" class="display-4 fw-bold">About Us</h1>
-      <a href="contact.html" class="btn btn-light btn-lg mt-3">Contact Us</a>
+      <p class="lead mb-4">quality web services for blue collar businesses</p>
+      <div class="hero-cta">
+        <a href="contact.html" class="btn btn-light btn-lg me-3" role="button" aria-label="Contact us to get started">Get Started</a>
+        <a href="portfolio.html" class="btn btn-outline-light btn-lg" role="button" aria-label="View our portfolio">See Our Work</a>
+      </div>
     </div>
   </section>
 
@@ -163,55 +167,63 @@
           </main>
           
 
-   
+  <!-- Footer Section -->
   <footer class="footer" role="contentinfo">
     <div class="footer-content container">
+        <!-- Brand -->
+        <div class="footer-brand">
+            <p class="footer-logo">Bayou Websites</p>
+            <p class="footer-tagline">Web Development for Blue-Collar Businesses</p>
+        </div>
   
-      <!-- Brand -->
-      <div class="footer-brand">
-        <h2 class="footer-logo">Bayou Websites</h2>
-        <p class="footer-tagline">Web Development for Blue-Collar Businesses</p>
-      </div>
+        <!-- Navigation -->
+        <div class="footer-nav">
+            <h3 class="footer-nav-title">Quick Links</h3>
+            <ul class="list-unstyled">
+                <li><a href="index.html" aria-label="Home page">Home</a></li>
+                <li><a href="about.html" aria-label="About us">About</a></li>
+                <li><a href="services.html" aria-label="Our services">Services</a></li>
+                <li><a href="portfolio.html" aria-label="Our portfolio">Portfolio</a></li>
+                <li><a href="contact.html" aria-label="Contact us">Contact</a></li>
+            </ul>
+        </div>
   
+        <!-- Newsletter -->
+        <div class="footer-newsletter">
+            <h3 class="footer-nav-title">Stay Updated</h3>
+            <form action="https://formspree.io/f/xeqyrgva" method="POST" aria-label="Subscribe to our newsletter">
+                <label for="newsletter-email" class="visually-hidden">Email address</label>
+                <div class="input-group">
+                    <input type="email" id="newsletter-email" name="email" class="form-control" placeholder="Your email address" required aria-describedby="newsletter-error">
+                    <button type="submit" class="btn btn-primary" aria-label="Subscribe to newsletter">Subscribe</button>
+                </div>
+                <p id="newsletter-error" class="text-danger mt-2 visually-hidden">Please enter a valid email address.</p>
+            </form>
+        </div>
+        <!-- Social Media -->
+        <div class="footer-socials" aria-label="Social media links">
+            <h3 class="footer-nav-title">Connect With Us</h3>
+            <div class="social-icons">
+            <a href="https://www.facebook.com/BayouWebsites" aria-label="Follow us on Facebook" target="_blank" class="text-white">
+            <i class="fab fa-facebook-f fa-lg text-white"></i>
+            </a>
+            <a href="https://www.instagram.com/BayouWebsites" aria-label="Follow us on Instagram" target="_blank" class="text-white">
+            <i class="fab fa-instagram fa-lg text-white"></i>
+            </a>
+            <a href="https://www.linkedin.com/company/BayouWebsites" aria-label="Follow us on LinkedIn" target="_blank" class="text-white">
+            <i class="fab fa-linkedin-in fa-lg text-white"></i>
+            </a>
+            </div>
+        </div>
   
-      <!-- Newsletter -->
-      <form class="footer-newsletter" action="https://formspree.io/f/xeqyrgva" method="POST" aria-label="Subscribe to our newsletter"></form>
-        <label for="newsletter-email" class="visually-hidden">Email address</label>
-        <input type="email" id="newsletter-email" name="email" placeholder="Your email address" required>
-        <button type="submit">Subscribe</button>
-      </form>
-  
-      <!-- Social Media -->
-      <div class="footer-socials" aria-label="Social Media">
-        <a href="https://www.facebook.com/BayouWebsites" aria-label="Facebook"><img src="https://img.icons8.com/ios-filled/24/ffffff/facebook.png" alt="" /></a>
-      </div>
-  
-      <!-- Copyright -->
-      <div class="footer-copy">
-        <p>&copy; 2025 Bayou Websites. All rights reserved.</p>
-      </div>
-  
+        <!-- Copyright -->
+        <div class="footer-copy">
+            <p>© 2025 Bayou Websites. All rights reserved. <a href="privacy.html" aria-label="Privacy policy">Privacy Policy</a></p>
+        </div>
     </div>
   </footer>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const navbarToggler = document.querySelector('.navbar-toggler');
-      const navbarCollapse = document.querySelector('#navbarNav');
-      const navLinks = document.querySelectorAll('.nav-link');
   
-      // Toggle navbar on button click
-      navbarToggler.addEventListener('click', () => {
-        navbarCollapse.classList.toggle('show');
-      });
   
-      // Close navbar when a nav-link is clicked
-      navLinks.forEach(link => {
-        link.addEventListener('click', () => {
-          if (navbarCollapse.classList.contains('show')) {
-            navbarCollapse.classList.remove('show');
-          }
-        });
-      });
-    });
-  </script>
-  
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/5hb7x2j5l5e5c5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-7+Q1g6v2x4j8z9e0c4f3a1b2d3e4f5g6h7i8j9k0l1m2n3o4p5q6r7s8t9u0v1w" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM8d7x1z5l5e5c5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous"></script>
