added navbar javascript

--- a/portfolio.html
+++ b/portfolio.html
@@ -249,21 +249,7 @@
               <p id="newsletter-error" class="text-danger mt-2 visually-hidden">Please enter a valid email address.</p>
           </form>
       </div>
-      <!-- Social Media -->
-      <div class="footer-socials" aria-label="Social media links">
-          <h3 class="footer-nav-title">Connect With Us</h3>
-          <div class="social-icons">
-          <a href="https://www.facebook.com/BayouWebsites" aria-label="Follow us on Facebook" target="_blank" class="text-white">
-          <i class="fab fa-facebook-f fa-lg text-white"></i>
-          </a>
-          <a href="https://www.instagram.com/BayouWebsites" aria-label="Follow us on Instagram" target="_blank" class="text-white">
-          <i class="fab fa-instagram fa-lg text-white"></i>
-          </a>
-          <a href="https://www.linkedin.com/company/BayouWebsites" aria-label="Follow us on LinkedIn" target="_blank" class="text-white">
-          <i class="fab fa-linkedin-in fa-lg text-white"></i>
-          </a>
-          </div>
-      </div>
+  
 
       <!-- Copyright -->
       <div class="footer-copy">
@@ -276,3 +262,70 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/5hb7x2j5l5e5c5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-7+Q1g6v2x4j8z9e0c4f3a1b2d3e4f5g6h7i8j9k0l1m2n3o4p5q6r7s8t9u0v1w" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM8d7x1z5l5e5c5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/5hb7x2j5l5e5c5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-7+Q1g6v2x4j8z9e0c4f3a1b2d3e4f5g6h7i8j9k0l1m2n3o4p5q6r7s8t9u0v1w" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM8d7x1z5l5e5c5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous"></script>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+      // Navbar elements
+      const navbarToggler = document.querySelector('.navbar-toggler');
+      const navbarCollapse = document.querySelector('#navbarNav');
+      const navLinks = document.querySelectorAll('.nav-link');
+      const navbar = document.querySelector('.navbar');
+
+      // Check if elements exist
+      if (!navbarToggler || !navbarCollapse || !navLinks || !navbar) {
+          console.warn('Navbar elements not found.');
+          return;
+      }
+
+      // Set active link based on current page
+      const setActiveLink = () => {
+          const currentPath = window.location.pathname.split('/').pop() || 'index.html';
+          navLinks.forEach(link => {
+              const linkPath = link.getAttribute('href');
+              link.classList.toggle('active', linkPath === currentPath);
+          });
+      };
+
+      // Initialize active link
+      setActiveLink();
+
+      // Toggle navbar on mobile
+      navbarToggler.addEventListener('click', () => {
+          const isExpanded = navbarCollapse.classList.contains('show');
+          navbarCollapse.classList.toggle('show');
+          navbarToggler.setAttribute('aria-expanded', !isExpanded);
+      });
+
+      // Close mobile menu when a nav link is clicked
+      navLinks.forEach(link => {
+          link.addEventListener('click', () => {
+              if (navbarCollapse.classList.contains('show')) {
+                  navbarCollapse.classList.remove('show');
+                  navbarToggler.setAttribute('aria-expanded', 'false');
+              }
+          });
+      });
+
+      // Handle window resize to reset menu state
+      window.addEventListener('resize', () => {
+          if (window.innerWidth >= 992 && navbarCollapse.classList.contains('show')) {
+              navbarCollapse.classList.remove('show');
+              navbarToggler.setAttribute('aria-expanded', 'false');
+          }
+      });
+
+      // Accessibility: Close menu on Escape key
+      document.addEventListener('keydown', (e) => {
+          if (e.key === 'Escape' && navbarCollapse.classList.contains('show')) {
+              navbarCollapse.classList.remove('show');
+              navbarToggler.setAttribute('aria-expanded', 'false');
+              navbarToggler.focus();
+          }
+      });
+  });
+</script>
