--- a/about.html
+++ b/about.html
@@ -40,10 +40,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link fw-semibold" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link fw-semibold" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active fw-semibold" href="about.html">About</a>
+            <a class="nav-link active fw-semibold" aria-current="page" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link fw-semibold" href="services.html">Services</a>
