--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link fw-semibold" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link fw-semibold" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link fw-semibold" href="about.html">About</a>
@@ -53,7 +53,7 @@
             <a class="nav-link fw-semibold" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active fw-semibold" href="contact.html">Contact</a>
+            <a class="nav-link active fw-semibold" aria-current="page" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
