--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link fw-semibold" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link fw-semibold" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link fw-semibold" href="about.html">About</a>
@@ -51,7 +51,7 @@
             <a class="nav-link fw-semibold" href="services.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active fw-semibold" href="portfolio.html">Portfolio</a>
+            <a class="nav-link active fw-semibold" aria-current="page" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link fw-semibold" href="contact.html">Contact</a>
