updated modal and other pages

--- a/about.html
+++ b/about.html
@@ -72,27 +72,40 @@
     </div>
   </section>
 
-            <!-- About Section -->
-            <section id="about" class="about-section py-5 bg-light" aria-labelledby="about-heading">
-              <div class="container">
-                <h2 id="about-heading" class="section-title text-center mb-4">Nice To Meet You!</h2>
-                <p class="about-text lead text-center mb-4">
-                  Our team are Louisiana natives and appreciate the rich environment that a Bayou provides. As a company, we want to offer that same level of value to the trade industry ecosystem,
-                  if you will. We are more than a website company though, we are a company that provides websites, business intelligence services, cloud computing advise, and cybersecurity risk assessments. 
-                  We are here to help you grow your business. We are a small business, just like you, and we understand the challenges you face. Our goal is to help you succeed in the digital world.
-                </p>
-                <div class="row justify-content-center">
-                  <div class="col-md-8">
-                    <ul class="about-values list-unstyled text-center">
-                      <li class="mb-2"><i class="fas fa-check-circle text-success me-2" aria-hidden="true"></i> Custom web solutions built for your workflow</li>
-                      <li class="mb-2"><i class="fas fa-hard-hat text-success me-2" aria-hidden="true"></i> Deep roots in blue-collar industries</li>
-                      <li class="mb-2"><i class="fas fa-mobile-alt text-success me-2" aria-hidden="true"></i> Mobile-first, conversion-focused design</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </section>
-          
+      <!-- About Section -->
+      <section id="about" class="about-section py-5 bg-light" aria-labelledby="about-heading">
+        <div class="container"></div>
+          <h2 id="about-heading" class="section-title text-center mb-4">Nice To Meet You!</h2>
+          <div class="row align-items-center">
+        <!-- Image -->
+        <div class="col-md-6 text-center mb-4 mb-md-0">
+          <img src="./images/louisiana.jpg" alt="Scenic view of Louisiana" class="img-fluid rounded shadow" loading="lazy">
+        </div>
+        <!-- Content -->
+        <div class="col-md-6">
+            <p class="about-text lead mb-4 text-start">
+            Our team are Louisiana natives and appreciate the rich environment that a Bayou provides. As a company, we want to offer that same level of value to the trade industry ecosystem.
+            We are more than a website company; we provide websites, business intelligence services, cloud computing advice, and cybersecurity risk assessments. 
+            We are here to help you grow your business. As a small business ourselves, we understand the challenges you face and aim to help you succeed in the digital world.
+          </p>
+          <ul class="about-values list-unstyled">
+            <li class="mb-3">
+          <i class="fas fa-check-circle text-success me-2" aria-hidden="true"></i>
+          <span>Custom web solutions built for your workflow</span>
+            </li>
+            <li class="mb-3">
+          <i class="fas fa-hard-hat text-success me-2" aria-hidden="true"></i>
+          <span>Deep roots in blue-collar industries</span>
+            </li>
+            <li class="mb-3">
+          <i class="fas fa-mobile-alt text-success me-2" aria-hidden="true"></i>
+          <span>Mobile-first, conversion-focused design</span>
+            </li>
+          </ul>
+        </div>
+          </div>
+        </div>
+      </section>
             <!-- Mission Section -->
             <section id="mission" class="mission-section py-5" aria-labelledby="mission-heading">
               <div class="container">
