--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
       </div>
       <div class="modal-body">
         <p>We specialize in creating tailored web solutions for blue-collar businesses. Let us help you grow your online presence!</p>
-      </div>
-      <div class="modal-footer">
-        <a href="contact.html" class="btn btn-primary">Get in Touch</a>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <form action="https://formspree.io/f/xeqyrgva" method="POST" aria-label="Schedule your appointment">
+          <input type="hidden" name="_subject" value="Schedule Request from Bayou Websites">
+          <input type="hidden" name="_captcha" value="false">
+          <button type="submit" class="btn btn-primary w-100">Schedule</button>
+        </form>
       </div>
     </div>
   </div>
 </div>
-
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/5hb7x2j5l5e5c5e5e5e5e5e5e5e5e5e5e5e5" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-7+Q1g6v2x4j8z9e0c4f3a1b2d3e4f5g6h7i8j9k0l1m2n3o4p5q6r7s8t9u0v1w" crossorigin="anonymous"></script>
