--- a/index.html
+++ b/index.html
@@ -210,6 +210,18 @@
         <form action="https://formspree.io/f/xeqyrgva" method="POST" aria-label="Schedule your appointment">
           <input type="hidden" name="_subject" value="Schedule Request from Bayou Websites">
           <input type="hidden" name="_captcha" value="false">
+          <div class="mb-3">
+            <label for="modal-name" class="form-label">Your Name</label>
+            <input type="text" class="form-control" id="modal-name" name="name" required>
+          </div>
+          <div class="mb-3">
+            <label for="modal-email" class="form-label">Email Address</label>
+            <input type="email" class="form-control" id="modal-email" name="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="modal-message" class="form-label">How can we help?</label>
+            <textarea class="form-control" id="modal-message" name="message" rows="3" required></textarea>
+          </div>
           <button type="submit" class="btn btn-primary w-100">Schedule</button>
         </form>
       </div>
